kubernetes/apps/kyverno/kyverno-policies/app/clusterpolicy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-baseline
  annotations:
    policies.kyverno.io/title: Baseline Pod Security Standards
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.8.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy enforces the latest version of the Pod Security Standards baseline profile by
      default cluster wide. This policy allows capabilities for gluetun containers on pods with the
      label "gluetun=true". This policy allows host paths for security scanners on pods with the
      label "allow-host-paths=true".
spec:
  background: true
  validationFailureAction: Enforce
  rules:
    - name: baseline
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaceSelector:
                matchLabels:
                  pod-security.kubernetes.io/enforce: privileged
          - resources:
              kinds:
                - Pod
              selector:
                matchLabels:
                  gluetun: "true"
          - resources:
              kinds:
                - Pod
              selector:
                matchLabels:
                  allow-host-paths: "true"
      validate:
        podSecurity:
          level: baseline
          version: latest
    - name: baseline-gluetun
      match:
        any:
          - resources:
              kinds:
                - Pod
              selector:
                matchLabels:
                  gluetun: "true"
      exclude:
        any:
          - resources:
              namespaceSelector:
                matchLabels:
                  pod-security.kubernetes.io/enforce: privileged
      validate:
        podSecurity:
          level: baseline
          version: latest
          exclude:
            - controlName: Capabilities
              images:
                - "ghcr.io/jfroy/gluetun:*"
              restrictedField: spec.initContainers[*].securityContext.capabilities.add
              values:
                - NET_ADMIN
                - NET_RAW
    - name: baseline-hostpaths
      match:
        any:
          - resources:
              kinds:
                - Pod
              selector:
                matchLabels:
                  allow-host-paths: "true"
      exclude:
        any:
          - resources:
              namespaceSelector:
                matchLabels:
                  pod-security.kubernetes.io/enforce: privileged
      validate:
        podSecurity:
          level: baseline
          version: latest
          exclude:
            - controlName: "HostPath Volumes"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-restricted
  annotations:
    policies.kyverno.io/title: Restricted Pod Security Standards
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.8.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy enforces the latest version of the Pod Security Standards restricted profile on
      pods in annotated namespaces.
spec:
  background: true
  validationFailureAction: Enforce
  rules:
    - name: restricted
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  pod-security.kubernetes.io/enforce: restricted
      validate:
        podSecurity:
          level: restricted
          version: latest
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-restricted-audit
  annotations:
    policies.kyverno.io/title: Restricted Pod Security Standards
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.8.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy audits the latest version of the Pod Security Standards restricted profile on
      pods in annotated namespaces.
spec:
  background: true
  validationFailureAction: Audit
  rules:
    - name: restricted
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  pod-security.kubernetes.io/audit: restricted
      validate:
        podSecurity:
          level: restricted
          version: latest
